[workspace]
members = [
    "flo",
    "flo-api",
    "flo-pdk",
    "plugins/flo-plugin-dummy"
]
resolver = "3"

[workspace.lints.rust]
unstable_features = "warn"
unused = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

missing_docs_in_private_items = "allow"

unwrap_used = "deny"
expect_used = "deny"