[package]
name = "flo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
serde = { version = "1.0.227", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }

[features]
test-integration = []

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.23.0"
